--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,22 @@ body {
     width: 60px;
     height: 60px;
 }
+.button_js {
+    text-align: center;
+}
+
+#myButton {
+    border: none;
+    border-radius: 15px;
+    width: 150px;
+    height: 50px;
+    background-color: #7ac5ff;
+    color: #f1f2f3;
+    font-weight: bold;
+
+}
+
+#demo img {
+    margin-top: 20px;
+    width: 25%;
+}
